keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak-ns
  labels:
    app: keycloak-app
spec:
  ports:
    - name: https-keycloak-external
      port: 443
      targetPort: 8443
  selector:
    app: keycloak-app
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-app-deployment
  namespace: keycloak-ns
  labels:
    app: keycloak-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-app
  template:
    metadata:
      labels:
        app: keycloak-app
    spec:
      containers:
        - name: keycloak-container
          image: quay.io/keycloak/keycloak:24.0.5
          volumeMounts:
            - name: tls
              mountPath: "/etc/ssl"
              readOnly: true
          args: ["start"]
          ports:
            - name: http-keycloak
              containerPort: 8443
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /realms/master
              port: 8443
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 20
            failureThreshold: 5
            successThreshold: 1
      volumes:
        - name: tls
          secret:
            secretName: keycloak-tls
            optional: false
