postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres-svc
  namespace: keycloak-ns
  labels:
    app: keycloak-postgres-app
spec:
  clusterIP: None
  selector:
    app: keycloak-postgres-app
  ports:
    - port: 5432       # Port that the service listens on
      targetPort: 5432 # Port on the Pod
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-postgres-sttf-deployment
  namespace: keycloak-ns
spec:
  serviceName: keycloak-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres-app
  template:
    metadata:
      labels:
        app: keycloak-postgres-app
    spec:
      containers:
        - name: keycloak-postgres-pod
          image: postgres:16.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: keycloak-postgres-pv-claim
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: keycloak-postgres-pv-claim
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
